# falconscan

./: Cargo.toml  README.md
src/: main.rs  scanner.rs  worker.rs
src/crowdstrike/: falconx.rs  mod.rs
src/sql/: mod.rs  sql.rs
